# StrokeTransferForParticipatingMedia

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.py  volume_data_repositories.json
assets/RisingSmoke/: pipeline_settings.json  scene_setting.xml
assets/RisingSmoke/camera/: camera_001.json  camera_002.json  camera_003.json  camera_004.json  camera_005.json  camera_006.json  camera_007.json  camera_008.json  camera_009.json  camera_010.json  camera_011.json  camera_012.json  camera_013.json  camera_014.json  camera_015.json  camera_016.json  camera_017.json  camera_018.json  camera_019.json  camera_020.json  camera_021.json  camera_022.json  camera_023.json  camera_024.json  camera_025.json  camera_026.json  camera_027.json  camera_028.json  camera_029.json  camera_030.json  camera_031.json  camera_032.json  camera_033.json  camera_034.json  camera_035.json  camera_036.json  camera_037.json  camera_038.json  camera_039.json  camera_040.json  (+310 more)
assets/RisingSmoke/exemplar/: annotation_114.json
assets/RisingSmoke/light/: light_001.json  light_002.json  light_003.json  light_004.json  light_005.json  light_006.json  light_007.json  light_008.json  light_009.json  light_010.json  light_011.json  light_012.json  light_013.json  light_014.json  light_015.json  light_016.json  light_017.json  light_018.json  light_019.json  light_020.json  light_021.json  light_022.json  light_023.json  light_024.json  light_025.json  light_026.json  light_027.json  light_028.json  light_029.json  light_030.json  light_031.json  light_032.json  light_033.json  light_034.json  light_035.json  light_036.json  light_037.json  light_038.json  light_039.json  light_040.json  (+310 more)
code/: aux_exemplar_frame_estimation.py  aux_transfer_region_labels.py  p10_render_strokes.py  p10_render_strokes_pencil.py  p11_final_composite.py  p2_compute_features.py  p3_preprocess_feature_basis.py  p4_annotation_interpolation.py  p5_regression.py  p6_relocation.py  p7_transfer.py  p8_smoothing.py  p9_gen_strokes.py  stroke_transfer.py
code/cpp_tools/: CMakeLists.txt
code/cpp_tools/exr2hdf_cli/: CMakeLists.txt  CMakeSourceFiles.txt
code/cpp_tools/exr2hdf_cli/src/: main.cpp
code/cpp_tools/gen_strokes_cli/: CMakeLists.txt
code/cpp_tools/gen_strokes_cli/src/: main.cpp
code/cpp_tools/lib/HDF5/: CMakeLists.txt  CMakeSourceFiles.txt
code/cpp_tools/lib/image/: CMakeLists.txt  CMakeSourceFiles.txt  image.cpp  image.h  imagegl.h  imageiopng.h  imageioutil.h
code/cpp_tools/lib/imgui/: CMakeLists.txt  CMakeSourceFiles.txt
code/cpp_tools/lib/strokes/: CMakeLists.txt  CMakeSourceFiles.txt  activeset.cpp  activeset.h  anchor.cpp  anchor.h  framebufferobject.h  sampler.h  sortutil.h  stroke.cpp  stroke.h
code/cpp_tools/oil_lighting_editor_gui/: CMakeLists.txt
code/cpp_tools/oil_lighting_editor_gui/src/: main.cpp
code/cpp_tools/pencil_lighting_editor_gui/: CMakeLists.txt
code/cpp_tools/pencil_lighting_editor_gui/src/: main.cpp
code/cpp_tools/render_strokes_cli/: CMakeLists.txt  CMakeSourceFiles.txt
code/cpp_tools/render_strokes_cli/src/: main.cpp
code/cpp_tools/render_strokes_pencil_cli/: CMakeLists.txt
code/cpp_tools/render_strokes_pencil_cli/src/: main.cpp
code/cpp_tools/render_surface_features_cli/: CMakeLists.txt  CMakeSourceFiles.txt
code/cpp_tools/render_surface_features_cli/src/: camera.h  main.cpp
code/util/annotation_interpolation/: annotation.py  interpolation.py  pipeline.py  rbf_model.py  vis_utils.py
code/util/basis/: plot.py  smoothing_basis.py  smoothing_orientations.py
code/util/common/: feature_basis_def.py  feature_basis_io.py
code/util/exemplar_estimation/: exemplar_estimation_GMM.py  plot.py
code/util/features/: plot.py  standardize.py
code/util/features_bases/: apparent_normal.py  apparent_normal_world_to_view_transform.py  black_body.py  blend_transmittance.py  bounding_box.py  bvh.py  camera.py  convert_rgb_to_l.py  convert_to_transmittance_cell.py  convert_to_transmittance_screen.py  convert_world_velocity_to_screen_space.py  curvature.py  data_io.py  depth_value.py  gaussian_filter_3d.py  generate_depth_value.py  generate_shadow_test.py  generate_sky_density_from_cloud.py  gradient_feature.py  integral_cell.py  integral_conversion.py  interpolation_taichi_field.py  invert_extinction.py  light.py  line_of_sight_integration.py  luminance_cell.py  luminance_cell_clouds.old  luminance_cell_clouds.py  luminance_cell_mix_media.py  multiply_2d_data.py  multiply_3d_data.py  normalize_and_rotate_basis.py  obj_loader.py  out_bb.py  plus_2d_data.py  plus_3d_data.py  sample_points_generator.py  silhouette_distance.py  surface_and_background_temperature.py  temperature_scaler.py  (+2 more)
code/util/image/: image2video.py  lab_util.py
code/util/infra/: logger.py  timer.py
code/util/model/: model_io.py  orientation_model.py  out_weight.py  scalar_field_model.py
code/util/multi_layer/: composite_layers.py
code/util/normalize/: norm.py
code/util/pipeline/: pipeline_decorator.py  time_logger.py
code/util/plot/: common.py  width_length.py
code/util/reference_rendering/: tone_map_rendering.py
code/util/region_labels/: transfer_region_labels.py
code/util/regression_transfer/: color_width_length.py  orientation.py
code/util/relocation/: feature_relocator.py  relocation.py
code/util/stroke_rendering/: cpp_stroke_pipelines.py
docs/: exemplar_frame_estimation.md  pipeline_overview.md  pipeline_settings_format.md
output/: run.py  setup_scene.py
